--- a/PasswordKeeper/PasswordKeeper/PasswordKeeper.csproj
+++ b/PasswordKeeper/PasswordKeeper/PasswordKeeper.csproj
@@ -220,12 +220,27 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\WebPageControllers\HostTypeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510262130020_Hosts And Credentials.cs" />
+    <Compile Include="Migrations\201510262130020_Hosts And Credentials.Designer.cs">
+      <DependentUpon>201510262130020_Hosts And Credentials.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201510262138003_Credential Virtuals.cs" />
+    <Compile Include="Migrations\201510262138003_Credential Virtuals.Designer.cs">
+      <DependentUpon>201510262138003_Credential Virtuals.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DAL\ApplicationDbContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Logic\Credential.cs" />
+    <Compile Include="Models\Logic\CredentialType.cs" />
+    <Compile Include="Models\Logic\Host.cs" />
+    <Compile Include="Models\Logic\HostType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -286,9 +301,15 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\HostType\Create.cshtml" />
+    <Content Include="Views\HostType\Delete.cshtml" />
+    <Content Include="Views\HostType\Details.cshtml" />
+    <Content Include="Views\HostType\Edit.cshtml" />
+    <Content Include="Views\HostType\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\API\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -297,6 +318,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201510262130020_Hosts And Credentials.resx">
+      <DependentUpon>201510262130020_Hosts And Credentials.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510262138003_Credential Virtuals.resx">
+      <DependentUpon>201510262138003_Credential Virtuals.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
