--- a/PasswordKeeper/PasswordKeeper/PasswordKeeper.csproj
+++ b/PasswordKeeper/PasswordKeeper/PasswordKeeper.csproj
@@ -268,6 +268,10 @@
     <Compile Include="Migrations\201510271608463_PasswordKeeperBaseClassNameAddition.Designer.cs">
       <DependentUpon>201510271608463_PasswordKeeperBaseClassNameAddition.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510280746183_CredentialTypeFromPasswordKeeper.cs" />
+    <Compile Include="Migrations\201510280746183_CredentialTypeFromPasswordKeeper.Designer.cs">
+      <DependentUpon>201510280746183_CredentialTypeFromPasswordKeeper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -370,6 +374,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510271608463_PasswordKeeperBaseClassNameAddition.resx">
       <DependentUpon>201510271608463_PasswordKeeperBaseClassNameAddition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510280746183_CredentialTypeFromPasswordKeeper.resx">
+      <DependentUpon>201510280746183_CredentialTypeFromPasswordKeeper.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
