Addition of Metadata and Partial Classes

--- a/PasswordKeeper/PasswordKeeper.Webapp/PasswordKeeper.Webapp.csproj
+++ b/PasswordKeeper/PasswordKeeper.Webapp/PasswordKeeper.Webapp.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CredentialTypesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HostsController.cs" />
     <Compile Include="Controllers\HostTypesController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -203,6 +204,8 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Logic\Kommon.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MetaData\Metadata.cs" />
+    <Compile Include="Models\EntityModel\PartialClasses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -288,6 +291,11 @@
     <Content Include="Views\CredentialTypes\Details.cshtml" />
     <Content Include="Views\CredentialTypes\Edit.cshtml" />
     <Content Include="Views\CredentialTypes\Index.cshtml" />
+    <Content Include="Views\Hosts\Create.cshtml" />
+    <Content Include="Views\Hosts\Delete.cshtml" />
+    <Content Include="Views\Hosts\Details.cshtml" />
+    <Content Include="Views\Hosts\Edit.cshtml" />
+    <Content Include="Views\Hosts\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
